--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,17 @@
-fastapi==0.95.2
-uvicorn==0.22.0
+fastapi==0.109.2
+uvicorn==0.27.1
 sqlalchemy==2.0.27
-pydantic==1.10.12
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
+pydantic==2.6.1
+pydantic-settings==2.1.0
+python-jose==3.3.0
+passlib==1.7.4
+python-multipart==0.0.9
+pymysql==1.1.0
+cryptography==42.0.2
+bcrypt==4.1.2
 python-dotenv==1.0.0
-mysql-connector-python==8.0.33
 pytest==7.4.0
 httpx==0.24.1
-email-validator==2.0.0 
+email-validator==2.0.0
+pandas==2.2.0
+openpyxl==3.1.2 
