--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-barcode-scanner": "^4.0.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.5.3",
